--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a class="nav-link" href="#services">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link" href="#">About Me</a>
           </li>
         </ul>
         </span>
@@ -44,7 +44,7 @@
       <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
           <h2 class="hero_title">Hi,I'm Jericco</h2>
-          <p class="hero_desc">I am a student</p>
+          <p class="hero_desc">I am a Financial Manager</p>
         </div>
       </div>
     </div>
