--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
           <h2 class="hero_title">Hi,I'm Jericco</h2>
-          <p class="hero_desc">I am a Financial Manager</p>
+          <p class="hero_desc">I am an Engineer</p>
         </div>
       </div>
     </div>
@@ -58,9 +58,7 @@
           <img src="Images/Foto.jpg" class="imageAboutPage" alt="">
         </div>
         <div class="col-lg-8">
-          <p> Perkenalkan nama saya Jericco Januar atau bisa dipanggil Jericco. Saya berdomisili di Jakarta Barat dan
-            berniat untuk menawarkan jasa Software Engineering seperti pembuatan website dan aplikasi online. Saya
-            adalah seorang lulusan Computer Science Universitas Peking Tsinghua University pada tahun 2030
+          <p>Hi, I'm Jericco januar, you can call me Jericco. I live in West Jakarta and I would like to search for potential employers to hire me as a Business Manager. I have a bachelor's degree in Business Management from the Beijing Tsinghua University, graduating in 2030.
           </p>
           <div class="row mt-3">
             <div class="col-md-6">
@@ -68,6 +66,12 @@
                 <li>Name: Jericco Januar</li>
                 <li>Age: 22</li>
                 <li>Occupation: Software Engineer</li>
+                <li>Education: Bachelor of Engineering (Beijing Tsinghua University)</li>
+                <div>
+                  <div class="row mt-3">
+                    <p>I'm a person with great critical thinking skills, allowing me to be more analytic and creative. I also have good communication and teamwork skills, allowing me to achieve goals and beyond more efficiently and effectively. I am also very quick to adapt to new environments and new schedules, further increasing my productivity.</p>
+                  </div>
+                </div>
               </ul>
   </section>
   <!-- services section-->
