--- a/index.html
+++ b/index.html
@@ -243,14 +243,14 @@
             <img src="Images/WhatsApp Image 2024-10-21 at 14.26.59_09cbb7bf.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Master of Ceremony</h5>
-              <p>Being the Master of Ceremony for the Tzu Chi board of firectors visit</p>
+              <p>Being the Master of Ceremony for the Tzu Chi board of directors visit</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="Images/Web.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
+              <h5>Website Building</h5>
+              <p>Building a website for geography project with 10.3</p>
             </div>
           </div>
           <div class="carousel-item">
