--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="Images/Web.jpg" class="d-block w-100" alt="...">
+            <img src="Images/Web.jpg.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Website Building</h5>
               <p>Building a website for geography project with 10.3</p>
