--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#services">Services</a>
+            <a class="nav-link" href="#about">About Me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About Me</a>
+            <a class="nav-link" href="#services">Services/a>
+              <li class="nav-item">
+            <a class="nav-link" href="#Carousel">Experiences/a>
           </li>
         </ul>
         </span>
