--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             <a class="nav-link" href="#about">About Me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#services">Services/a>
+            <a class="nav-link" href="#services">Services</a>
               <li class="nav-item">
-            <a class="nav-link" href="#Carousel">Experiences/a>
+            <a class="nav-link" href="#skills">Skills</a>
           </li>
         </ul>
         </span>
